Fixes ticket count centered on small screen

--- a/src/onegov/town6/theme/styles/tickets.scss
+++ b/src/onegov/town6/theme/styles/tickets.scss
@@ -124,7 +124,6 @@ $all-ticket-icon: '\f055';
     border: 0;
     height: 400px;
     padding-top: 150px;
-    text-align: center;
 }
 
 
